fixing responsive issue and layout shifting

--- a/mobile.css
+++ b/mobile.css
@@ -150,6 +150,24 @@
     width: 400px;
     height: 400px;
   }
+
+  /* team card */
+
+.team-card-container{
+    gap: 20px;
+    justify-content: center;
+}
+
+.team-card{
+    width: 90%;
+}
+
+.team-card > img{
+    width: 100%;
+    height: 320px;
+object-fit: cover;
+object-position: top;
+}
 }
 
 @media only screen and (max-width: 900px) {
@@ -251,6 +269,19 @@
     width: 100%;
     height: 450px;
   }
+
+  /* team section */
+.team-section > .heading > h1{
+    width: 100%;
+    font-size: 36px;
+    line-height: 40px;
+    margin: 15px 0;
+}
+
+.team-section > .heading > p{
+    width:100%;
+}
+
 }
 
 @media only screen and (max-width: 768px) {
@@ -327,9 +358,29 @@
     width: 100%;
     height: 350px;
   }
+
+  /* footer */
+
+  .footer-icon{
+    position: relative;
+    padding: 0;
+    width: 40px;
+    height: 40px;
+  }
+  .footer-icon::before{
+    position: absolute;
+    left: 13px;
+    top: 11px;
+}
+
 }
 
 @media only screen and (max-width: 480px) {
+
+    .sm-flex-col{
+        flex-direction: column;
+    }
+
   /* header-section */
   .hero-img {
     width: 320px;
@@ -408,16 +459,67 @@
   }
 
   .about-container-1 > .left-col > h1 {
-    font-size: 28px;
+    font-size: 26px;
+    margin: 20px 0;
+    line-height: 40px;
   }
 
   .about-container-2 > .right-col > h1 {
-    font-size: 28px;
+    font-size: 26px;
+    margin: 20px 0;
+    line-height: 40px;
   }
 
   .about-container-3 > .left-col > h1 {
-    font-size: 28px;
+    font-size: 26px;
+    margin: 20px 0;
+    line-height: 40px;
   }
+
+  p{
+    font-size: 16px;
+    line-height: 24px;
+  }
+
+    /* team section */
+.team-section > .heading > h1{
+    width: 100%;
+    font-size: 28px;
+    line-height: 35px;
+    margin: 8px 0;
+}
+
+.team-section {
+    padding: 50px 0;
+}
+
+  /* footer */
+  .footer-top{
+    gap: 20px;
+    text-align: center;
+  }
+
+  .footer-social-icon{
+    gap: 10px;
+    justify-content: center;
+}
+
+  .footer-social-icon > a{
+    font-size: 13px;
+  }
+
+  .footer-icon{
+    position: relative;
+    padding: 0;
+    width: 30px;
+    height: 30px;
+  }
+  .footer-icon::before{
+    position: absolute;
+    left: 10px;
+    top: 10px;
+}
+
 }
 
 @media only screen and (max-width: 320px) {
