--- a/style.css
+++ b/style.css
@@ -397,6 +397,11 @@ object-position: right;
     padding: 80px 0;
 }
 
+.team-card-container{
+    gap: 20px;
+    justify-content: center;
+}
+
 .team-card{
     width: 350px;
 }
@@ -458,6 +463,7 @@ object-position: 50% 20%;
 
 .footer-links{
     margin-top: 30px;
+    gap: 30px;
 }
 
 .footer-links ul{
